更新系APIを変更する (#27)
## 変更点

- 使用していない`testdaat`を削除する
- DBに接続できないバグを修正する
- `middleware`パッケージに切り分ける
- 自動生成ツールの扱い方を整理する
