# doc/openapi.yaml
@@ -43,7 +43,6 @@ paths:
       parameters:
         - $ref: "#/components/parameters/limit"
         - $ref: "#/components/parameters/offset"
-        - $ref: "#/components/parameters/sort"
       responses:
         200:
           description: 成功
@@ -117,7 +116,6 @@ paths:
       parameters:
         - $ref: "#/components/parameters/limit"
         - $ref: "#/components/parameters/offset"
-        - $ref: "#/components/parameters/sort"
       responses:
         200:
           description: 成功
@@ -328,16 +326,6 @@ components:
         type: integer
         minimum: 0
         default: 0
-    sort:
-      name: sort
-      in: query
-      description: リソースの並び順を指定する。`-`をつければ降順になり、つけなければ昇順となる。
-      schema:
-        type: string
-        enum:
-          - createdAt
-          - -createdAt
-        default: -createdAt
     projectID:
       name: projectID
       in: path
